--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
 
           </div>
   
-          <form action="https://echo.htmlacademy.ru" target="_blank">
+          <form action="https://echo.htmlacademy.ru" target="_blank" method="post">
             <label for="name">
               <input class="form-elements" type="text" name="name" placeholder="Name" required autocomplete="off"><br>
             </label>
