My-team full version

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="./style/normalize.css">
   <link rel="stylesheet" href="./style/style.css">
+  <link rel="stylesheet" href="./style/media.css">
 </head>
 
 <body>
@@ -38,6 +39,9 @@
 
         <a class="site-header__contact-logo contact-logo" href="./contact.html">contact us</a>
 
+        <button type="button" class="ham-btn">
+          <img class="hamburg-btn" src="./img/Group 2.png" alt="hamburg-btn" width="20" height="20">
+        </button>
       </div>
     </div>
   </header>
@@ -197,8 +201,48 @@
           <p class="social-network__footer-text1 footer-text1">Copyright 2020. All Rights Reserved</p>
         </div>
       </div>
+
+
+
+      <div class="site-footer1">
+
+        <div class="site-footer__myteam-footer myteam-footer1">
+          <a class="myteam-footer__site-link site-link1" href="./index.html">
+            <img class="myteam-footer__site-logo site-logo1" src="./img/myteam.svg" alt="logo" width="160" height="40">
+          </a>
+
+          <ul class="myteam-footer__footer-list footer-list">
+            <li class="footer-list__footer-item footer-item">
+              <a class="footer-list__footer-link footer-link" href="./index.html">home</a>
+            </li>
+
+            <li class="footer-list__footer-item footer-item">
+              <a class="footer-list__footer-link footer-link" href="./about.html">about</a>
+            </li>
+          </ul>
+
+
+          <a class="social-network__socnet-link socnet-link" href="#">
+            <img class="social-network__socnet-img socnet-img" src="./img/Path.svg" alt="facebook">
+          </a>
+          <a class="social-network__socnet-link socnet-link" href="#">
+            <img class="social-network__socnet-img socnet-img" src="./img/Path (1).svg" alt="pinterest">
+          </a>
+          <a class="social-network__socnet-link socnet-link" href="#">
+            <img class="social-network__socnet-img socnet-img" src="./img/Path (2).svg" alt="twitter">
+          </a>
+        </div>
+
+        <div class="qwerty1">
+          <p class="qwe">987 Hillcrest Lane <br> Irvine, CA <br>California 92714 <br> Call Us : 949-833-7432</p>
+          <p class="social-network__footer-text1 footer-text1">Copyright 2020. All Rights Reserved</p>
+        </div>
+
+      </div>    
+
+      
     </div>
-  </footer>  
+  </footer>
 </body>
 
 </html>
